archetect-minijinja/tests/snapshots/test_templates__vm@block.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "<title>{% block title %}{% endblock %}</title>\n{% block body %}{{ var }}{% endblock body %}"
info:
  var: foo
input_file: archetect_minijinja/tests/inputs/block.txt
---
<title></title>
foo

