archetect-minijinja/tests/snapshots/test_templates__vm@block_super.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "{% extends template %}\n{% block title %}[{{ super() }}]{% endblock %}\n{% block body %}{{ super()|upper }}{% endblock %}"
info:
  template: simple_layout.txt
input_file: archetect_minijinja/tests/inputs/block_super.txt
---
<title>[default title]</title>
DEFAULT BODY

