archetect-minijinja/tests/snapshots/test_templates__vm@cmp.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "{% if two > one and two < three %}\n  test\n{% endif %}"
info:
  one: 1
  three: 3
  two: 2
input_file: archetect_minijinja/tests/inputs/cmp.txt
---

  test


