archetect-minijinja/tests/snapshots/test_templates__vm@err_bad_call.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "This is {{ an_unknown_function() }}!"
info: {}
input_file: archetect_minijinja/tests/inputs/err_bad_call.txt
---
!!!ERROR!!!

Error {
    kind: UnknownFunction,
    detail: "an_unknown_function is unknown",
    name: "err_bad_call.txt",
    line: 1,
}

unknown function: an_unknown_function is unknown (in err_bad_call.txt:1)
------------------------------ err_bad_call.txt -------------------------------
   1 > This is {{ an_unknown_function() }}!
     i            ^^^^^^^^^^^^^^^^^^^^^ unknown function
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------

