archetect-minijinja/tests/snapshots/test_templates__vm@err_bad_call_block_call.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "{% call 42 %}...{% endcall %}"
info: {}
input_file: archetect_minijinja/tests/inputs/err_bad_call_block_call.txt
---
!!!SYNTAX ERROR!!!

Error {
    kind: SyntaxError,
    detail: "expected call expression in call block, got constant",
    name: "err_bad_call_block_call.txt",
    line: 1,
}

syntax error: expected call expression in call block, got constant (in err_bad_call_block_call.txt:1)
------------------------- err_bad_call_block_call.txt -------------------------
   1 > {% call 42 %}...{% endcall %}
     i         ^^ syntax error
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------

